# Deskdrink

./: .gitignore  README.md  pyproject.toml
src/: deskdrink.py
src/deskdrink/: __main__.py
src/deskdrink/data/: settings.json
src/deskdrink/gui/: settingsWindow.py
src/deskdrink/modules/: settingsHandler.py
src/deskdrink/service/: notificator.py
