[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "deskdrink_elmaron"
version = "1.0.0"
authors = [
    {name="Elmaron", email="info@vindona.de"},
]
description = "A simple reminder for drinking a sip of water from time to time"
readme = "README.md"
requires-python = ">= 3.13.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU GPLv3"
license-files = ["LICEN(CS)E*"]

[project.urls]
Homepage = "https://github.com/elmaron/deskdrink"
Issues = "https://github.com/elmaron/deskdrink/issues"